# ubase-installer

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build.yml  pr-check.yml  release.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
