[package]
name = "ubase-installer"
version = "1.0.0"
description = "uBase Installer Tauri Application"
authors = ["uBase Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
